ilovereact fixed ui

--- a/pd_frontend/src/PopUp.module.css
+++ b/pd_frontend/src/PopUp.module.css
@@ -73,10 +73,10 @@
     height: 15%;
 }
 
-.winnerMove:hover {
-  opacity: 0.6;
+.grid {
+
 }
 
-.loserMove:hover {
-  opacity: 0.6;
+.grid:hover {
+    opacity: 0.6;
 }
